<resources>
    <string name="app_name">Tetris</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>
    <string name="next_figure">Next Figure:</string>
    <string name="score">Score:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="rotate">Rotate</string>
</resources>
