<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.knowakowski.tetris.TopSurfaceView
        android:id="@+id/surfaceView_aboveGameSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444">

        <TextView
            android:id="@+id/textView_appName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="11"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3">

            <pl.knowakowski.tetris.GameSurfaceView
                android:id="@+id/surfaceView_gamePanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/grid"
                android:layout_weight="5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_pause"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/pause" />

                    <Button
                        android:id="@+id/button_play"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/play" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_nextItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/next_figure" />

                <pl.knowakowski.tetris.NextFigureSurfaceView
                    android:id="@+id/surfaceView_nextItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="10"
                    android:background="@drawable/small_grid" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="10">

                    <TextView
                        android:id="@+id/textView_scoreText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/score" />
                    <TextView
                        android:id="@+id/textView_scorePoints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:gravity="center"
            android:layout_weight="10">

            <Button
                android:id="@+id/button_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/left" />

            <Button
                android:id="@+id/button_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/right" />

            <Button
                android:id="@+id/button_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/down" />

            <Button
                android:id="@+id/button_rotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/rotate" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>